# tt-lang-t27

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG_v0.4.0-pre.md  CHANGELOG_v0.4.0.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: P3109_CROSSWALK.md
docs/conformance/: MANIFEST_v0.4.0-pre.json  MANIFEST_v0.4.0.json  p3109_crosswalk.md  validation_report.json
src/tt_lang_t27/: __init__.py  catalog.py  cli.py  cli_catalog.py  cli_mxfp4.py  conformance.py  conformance_mxfp4.py  decorator.py  gf16.py  mxfp4.py  registry.py
src/tt_lang_t27/data/: all_formats_v0.json
tests/: test_catalog.py  test_catalog_invariants.py  test_gf16.py  test_mxfp4.py
vectors/: bf16_conformance_v0.json  e8m0_block_conformance_v0.json  format-spec-001-sample.json  fp8_e4m3_conformance_v0.json  fp8_e5m2_conformance_v0.json  gf16_conformance_v0.json  mxfp4_conformance_v0.json
