[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tt-lang-t27"
version = "0.4.0"
description = "Open Apache-2.0 numeric-format SSOT bridge: 83-format catalog from t27 (GF + MXFP4 + IEEE + posit + takum + lns + ...) for tt-lang kernels."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Dmitrii Vasilev", email = "admin@t27.ai" }]
keywords = [
    "tt-lang",
    "tenstorrent",
    "goldenfloat",
    "mxfp4",
    "ocp-microscaling",
    "numeric-format",
    "conformance-vectors",
    "formal-verification",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7", "pytest-cov>=4"]

[project.urls]
Homepage      = "https://github.com/gHashTag/tt-lang-t27"
Issues        = "https://github.com/gHashTag/tt-lang-t27/issues"
"t27 SSOT"    = "https://github.com/gHashTag/t27"
"tt-lang"     = "https://github.com/tenstorrent/tt-lang"
"arXiv"       = "https://arxiv.org/abs/2606.05017"

[project.scripts]
tt-lang-t27-conform = "tt_lang_t27.cli:main"
tt-lang-t27-mxfp4-conform = "tt_lang_t27.cli_mxfp4:main"
tt-lang-t27-catalog = "tt_lang_t27.cli_catalog:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tt_lang_t27"]

[tool.hatch.build.targets.wheel.force-include]
"src/tt_lang_t27/data/all_formats_v0.json" = "tt_lang_t27/data/all_formats_v0.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
